<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main"
    tools:context=".MainActivity"
    tools:visibility="visible">

    <Button
        android:id="@+id/carMake"
        android:layout_width="298dp"
        android:layout_height="59dp"
        android:layout_marginTop="500dp"
        android:alpha="0.65"
        android:text="@string/CarMake"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/hint"
        android:layout_width="298dp"
        android:layout_height="59dp"
        android:layout_marginTop="4dp"
        android:alpha="0.65"
        android:text="@string/Hint"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carMake" />

    <Button
        android:id="@+id/image"
        android:layout_width="298dp"
        android:layout_height="59dp"
        android:layout_marginTop="4dp"
        android:alpha="0.65"
        android:text="@string/CarImage"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hint" />

    <Button
        android:id="@+id/advance"
        android:layout_width="298dp"
        android:layout_height="59dp"
        android:layout_marginTop="4dp"
        android:alpha="0.65"
        android:text="@string/AdLevel"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:alpha="1.10"
        android:text="@string/timer"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="415dp"
        android:layout_height="118dp"
        android:layout_marginBottom="364dp"
        android:alpha="0.75"
        android:background="#CEA89292"
        android:fontFamily="serif"
        android:gravity="center"
        android:lineSpacingExtra="36sp"
        android:text="@string/main_name"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintBottom_toTopOf="@+id/carMake"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="422dp"
        android:layout_height="59dp"
        android:layout_marginTop="40dp"
        android:alpha="0.20"
        android:background="#201D1D"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>