<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/third"
    tools:context=".ImageActivity">

    <ImageButton
        android:id="@+id/imageRanView"
        android:layout_width="wrap_content"
        android:layout_height="176dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="97dp"
        android:layout_marginEnd="85dp"
        android:layout_marginRight="85dp"
        android:layout_marginBottom="58dp"
        android:alpha="0.75"
        android:background="#222020"
        android:contentDescription="@string/todo"
        android:onClick="submitAnswerView1"
        android:scaleType="center"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/timeTextView"
        android:layout_width="177dp"
        android:layout_height="44dp"
        android:layout_alignTop="@+id/imageRanView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="-65dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:alpha="0.75"
        android:background="#AD081B8A"
        android:gravity="center"
        android:text="@string/time"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/imageRanView2"
        android:layout_width="wrap_content"
        android:layout_height="179dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="89dp"
        android:layout_marginLeft="89dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="85dp"
        android:layout_marginRight="85dp"
        android:layout_marginBottom="58dp"
        android:alpha="0.75"
        android:background="#222020"
        android:contentDescription="@string/todo"
        android:onClick="submitAnswerView2"
        android:scaleType="center" />

    <ImageButton
        android:id="@+id/imageRanView3"
        android:layout_width="237dp"
        android:layout_height="170dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="89dp"
        android:layout_marginLeft="89dp"
        android:layout_marginTop="462dp"
        android:layout_marginEnd="85dp"
        android:layout_marginRight="85dp"
        android:layout_marginBottom="58dp"
        android:alpha="0.75"
        android:background="#222020"
        android:contentDescription="@string/todo"
        android:onClick="submitAnswerView3"
        android:scaleType="center"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/ranButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageRanView3"
        android:layout_alignLeft="@+id/imageRanView3"
        android:layout_alignBottom="@+id/imageRanView3"
        android:layout_marginStart="73dp"
        android:layout_marginLeft="73dp"
        android:layout_marginBottom="-116dp"
        android:text="@string/ranButton" />

    <TextView
        android:id="@+id/randomCarImage"
        android:layout_width="148dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/imageRanView3"
        android:layout_alignLeft="@+id/imageRanView3"
        android:layout_alignBottom="@+id/imageRanView3"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginBottom="-61dp"
        android:alpha="0.65"
        android:background="#852525"
        android:gravity="center"
        android:text="@string/textViewRandom"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

</RelativeLayout>
