<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="40dp"
    android:background="@drawable/forth"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewPoint"
        android:layout_width="50dp"
        android:layout_height="42dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:background="#AD081B8A"
        android:gravity="center"
        android:text="@string/points"
        android:textColor="#FF0000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/timeTextView2"
        android:layout_width="172dp"
        android:layout_height="44dp"
        android:layout_marginStart="239dp"
        android:layout_marginLeft="239dp"
        android:layout_marginTop="-44dp"
        android:background="#AD081B8A"
        android:gravity="center"
        android:text="@string/time"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:foregroundGravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.75"
                android:background="#FFFFFF"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/background" />

            <EditText
                android:id="@+id/typeAnswer1"
                android:layout_width="180dp"
                android:layout_height="42dp"
                android:layout_marginStart="55dp"
                android:layout_marginLeft="55dp"
                android:layout_marginTop="40dp"
                android:alpha="0.75"
                android:autofillHints="no"
                android:background="@color/white"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/textViewAnswer1"
                android:layout_width="125dp"
                android:layout_height="42dp"
                android:layout_marginStart="270dp"
                android:layout_marginLeft="270dp"
                android:layout_marginTop="-42dp"
                android:alpha="0.95"
                android:gravity="center"
                android:text="@string/answerTextBoxes"
                android:textColor="#000000"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:alpha="0.75"
                android:background="#FFFFFF"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/background" />

            <EditText
                android:id="@+id/typeAnswer2"
                android:layout_width="180dp"
                android:layout_height="42dp"
                android:layout_marginStart="55dp"
                android:layout_marginLeft="55dp"
                android:layout_marginTop="40dp"
                android:alpha="0.75"
                android:autofillHints=""
                android:background="@color/white"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:text=""
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/textViewAnswer2"
                android:layout_width="125dp"
                android:layout_height="42dp"
                android:layout_marginStart="270dp"
                android:layout_marginLeft="270dp"
                android:layout_marginTop="-42dp"
                android:alpha="0.95"
                android:gravity="center"
                android:text="@string/answerTextBoxes"
                android:textColor="#000000"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:alpha="0.75"
                android:background="#FFFFFF"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/background" />

            <EditText
                android:id="@+id/typeAnswer3"
                android:layout_width="180dp"
                android:layout_height="42dp"
                android:layout_marginStart="55dp"
                android:layout_marginLeft="55dp"
                android:layout_marginTop="40dp"
                android:alpha="0.75"
                android:autofillHints=""
                android:background="@color/white"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:text=""
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/textViewAnswer3"
                android:layout_width="125dp"
                android:layout_height="42dp"
                android:layout_marginStart="270dp"
                android:layout_marginLeft="270dp"
                android:layout_marginTop="-42dp"
                android:alpha="0.95"
                android:gravity="center"
                android:text="@string/answerTextBoxes"
                android:textColor="#000000"
                android:textStyle="bold" />

            <Button
                android:id="@+id/checkAnswers"
                android:layout_width="412dp"
                android:layout_height="65dp"
                android:layout_marginTop="40dp"
                android:alpha="0.75"
                android:paddingTop="9dp"
                android:paddingBottom="15dp"
                android:text="@string/play"
                android:textStyle="bold"
                app:backgroundTint="#6E0A0A" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>